--- a/app/views/contents/home.html.erb
+++ b/app/views/contents/home.html.erb
@@ -58,17 +58,23 @@
  
   
   <h2 class="value-prop">FREE Desirability Testing based on the Microsoft Reaction Card Method</h2>
-<p class="value-prop">INSERT VIDEO</p>
+<p class="value-prop">
+	
+	<iframe width="640" height="360" src="//www.youtube.com/embed/67SmOFm7ESc?controls=0&showinfo=0&rel=0&vq=hd720" frameborder="0" allowfullscreen></iframe>
+	
+	
+	
+</p>
 
 <div class="grey">
 	<div class="wrapper">
 		<div class = "tell-me-more group">
 		
 			<h2>Tell me more</h2>  
-			<p class="no-indent">The Microsoft Reaction Card method was developed in 2002 by Joey Benedek and Trish Miner in their paper <a href="http://www.microsoft.com/usability/uepostings/desirabilitytoolkit.doc", class="blue-link">Measuring Desirability: New Methods for Evaluating Desirability in a Usability Lab Setting</a>. It is used to check the emotional response of a design or product and is commonly used in the field of software design.</p>
+			<p class="no-indent">The <i>Microsoft Reaction Card Method</i> was developed in 2002 by Joey Benedek and Trish Miner in their paper <a href="http://www.microsoft.com/usability/uepostings/desirabilitytoolkit.doc", class="blue-link">Measuring Desirability: New Methods for Evaluating Desirability in a Usability Lab Setting</a>. It is used to check the emotional response of a design or product and is commonly used in the field of software design.</p>
 			<p class="no-indent">Benedek and Miner suggested presenting participants with a design and a set of 118 adjectives to describe their reactions (these adjectives represented a mix of descriptions that people may consider positive or negative). They would then ask participants to select the 3 to 5 words that they thought best described the design.</p>
-			<p class="no-indent"><i>Mojoleaf uses some of these original words, but retains the split between positive and negative terms Benedek and Miner suggested and does not restrict the number of words that can be chosen.</i></p>
-			<p class="no-indent">Combining the output from multiple sessions, the Reaction Card method can be used to help make an informed decision about design direction and get a view as to whether the presented design options contain the characteristics the brand is trying to portray.<p>
+			<p class="no-indent"><i>Mojoleaf only uses some of these original words, but retains the split between positive and negative terms Benedek and Miner suggested and does not restrict the number of words that can be chosen.</i></p>
+			<p class="no-indent">Combining the output from multiple sessions, the <i>Reaction Card Method</i> can be used to help make an informed decision about design direction and get a view as to whether the presented design options contain the characteristics the brand is trying to portray.<p>
 		</div>
 	
 	
@@ -77,7 +83,7 @@
 			
 			<p class="no-indent">Everything has a halo effect and those first impressions can impact a product’s perceived utility, usability, and credibility.
 			A negative first impression means that customers are more likely to find fault, even if a product’s overall usability is good and the product offers real value.</p>
-			<p class="no-indent">The issue with just asking people what they prefer as part of a usability test, for example, is that the response we are looking for from users is more emotional, it is less about users’ ability to accomplish tasks and more about their affective response to a given design and the Reaction Card method can do a much better job of informing and helping to achieve consensus on design decisions.</p>
+			<p class="no-indent">The issue with just asking people what they prefer as part of a usability test, for example, is that the response we are looking for from users is more emotional, it is less about users’ ability to accomplish tasks and more about their affective response to a given design and the <i>Reaction Card Method</i> can do a much better job of informing and helping to achieve consensus on design decisions.</p>
 			<div class="main-cta">
 				
 				
