--- a/app/views/results/index.html.erb
+++ b/app/views/results/index.html.erb
@@ -75,7 +75,7 @@
 			    
 			
 			        	<% @stats.each do |array| %>
-								{"text":"<%= array[0].option_name %>","size":<%= array[1] * 10 %>},
+								{"text":"<%= array[0].option_name %>","size":<%= array[1] + 10 %>},
 						<% end %>];
 			    
 			    
