Devise to work with sendgrid

--- a/app/views/test_mailers/test_added.html.erb
+++ b/app/views/test_mailers/test_added.html.erb
@@ -22,5 +22,5 @@
 
 
 <p>When your test ends, we'll let you know.</p>
-<p>Alternatively, you can see how your test is going at any time from <%= link_to "Your dashboard", host: 'localhost:3000', controller: "tests", action: "index"  %>.</p>
+<p>Alternatively, you can see how your test is going at any time from <%= link_to "Your dashboard", host: 'www.mojoleaf.com', controller: "tests", action: "index"  %>.</p>
 
