--- a/app/views/test_mailers/test_complete.html.erb
+++ b/app/views/test_mailers/test_complete.html.erb
@@ -1,6 +1,6 @@
 <h2>Full results available</h2> 
 
-Hope you're well, just to let you know your test <strong>"<%= @test.title %>"</strong> has ended and you can see the full results from <%= link_to "Your dashboard", host: 'localhost:3000', controller: "tests", action: "index"  %>.</p>
+Hope you're well, just to let you know your test <strong>"<%= @test.title %>"</strong> has ended and you can see the full results from <%= link_to "Your dashboard", host: 'www.mojoleaf.com', controller: "tests", action: "index"  %>.</p>
 
 <h3>We're always interested to get <i>your</i> feedback</h3>
 
