Changed viewport again and goo.gl

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-	<meta name="viewport" content="initial-scale=1">
+	<meta name="viewport" content="width=900, initial-scale=1">
     <title><%= @page_title %> | Mojoleaf</title>
     <%= favicon_link_tag '/favicon.ico' %>
     <%= favicon_link_tag '/touch-icon.png', rel: 'apple-touch-icon', type: 'image/png' %>
