--- a/app/views/contents/home.html.erb
+++ b/app/views/contents/home.html.erb
@@ -60,8 +60,7 @@
   <h2 class="value-prop">FREE Desirability Testing based on the Microsoft Reaction Card Method</h2>
 <p class="value-prop">
 	
-	<iframe width="640" height="360" src="//www.youtube.com/embed/67SmOFm7ESc?controls=0&showinfo=0&rel=0&vq=hd720" frameborder="0" allowfullscreen></iframe>
-	
+	<iframe width="640" height="360" src="//www.youtube.com/embed/67SmOFm7ESc?controls=0&showinfo=0&rel=0" frameborder="0" allowfullscreen></iframe>
 	
 	
 </p>
