--- a/app/views/contents/home.html.erb
+++ b/app/views/contents/home.html.erb
@@ -60,8 +60,7 @@
   <h2 class="value-prop">FREE Desirability Testing based on the Microsoft Reaction Card Method</h2>
 <p class="value-prop">
 	
-	<iframe width="640" height="360" src="//www.youtube.com/embed/67SmOFm7ESc?controls=0&showinfo=0&rel=0" frameborder="0" allowfullscreen></iframe>
-	
+	    <img id="yourtube-video" src="/assets/desirability-testing-video-placeholder.png" data-video="http://www.youtube.com/embed/67SmOFm7ESc?controls=0&showinfo=0&rel=0&autoplay=1">
 	
 </p>
 
@@ -136,6 +135,17 @@
     });
   </script>
 <!-- End of SMOOTH SCROLL -->
+
+
+<script>
+    $('img#yourtube-video').click(function(){
+        video = '<iframe width="640" height="360" frameborder="0" allowfullscreen src="'+ $(this).attr('data-video') +'"></iframe>';
+        $(this).replaceWith(video);
+    });
+
+    
+   </script>
+
 <!-- Start of LEARN FADE OUT -->
   <script>
     $(document).ready(function(){
