--- a/app/views/contents/home.html.erb
+++ b/app/views/contents/home.html.erb
@@ -35,7 +35,7 @@
 		
 	<%else%>
 		
-		<%= link_to "Let's get started", tests_path, class: "button"%>
+		<%= link_to "Let's get started", new_user_registration_path, class: "button"%>
 		
 	<% end %>
 		
