Meta Description added

--- a/app/views/contents/home.html.erb
+++ b/app/views/contents/home.html.erb
@@ -1,5 +1,5 @@
 <% @page_title = 'Get feedback on your design' %>
-
+<% @meta_description = 'FREE desirability testing using the Microsost Reaction Card method. Get feedback on your design'%>
 <% if flash[:error].present? %>
           <div data-alert class="home-flash">
             <%= flash[:error] %>
