--- a/app/views/contents/privacy_policy.html.erb
+++ b/app/views/contents/privacy_policy.html.erb
@@ -1,4 +1,5 @@
 <% @page_title = 'Privacy Policy' %>
+<% @meta_description = "Privacy policy for mojoleaf.com" %>
 
 <%= render partial: 'layouts/header' %>
 
