--- a/app/views/contents/terms_of_service.html.erb
+++ b/app/views/contents/terms_of_service.html.erb
@@ -1,5 +1,5 @@
 <% @page_title = 'Terms of Service' %>
-
+<% @meta_description = "Terms of Service for mojoleaf.com" %>
 <%= render partial: 'layouts/header' %>
 
 
