--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,4 +1,5 @@
 <% @page_title = 'Register' %>
+<% @meta_description = "Once registered you will be able to get feedback on your design using the Microsoft Reaction Card Method" %>
 
 <%= render partial: 'layouts/header' %>
 
