--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <title><%= @page_title %> | Mojoleaf</title>
+    <meta name="description" content="<%= @meta_description %>">
     <meta charset="utf-8" />
 	<meta name="viewport" content="width=900, initial-scale=1">
-    <title><%= @page_title %> | Mojoleaf</title>
+
     <%= favicon_link_tag '/favicon.ico' %>
     <%= favicon_link_tag '/touch-icon.png', rel: 'apple-touch-icon', type: 'image/png' %>
    
