--- a/app/views/contents/cookie_policy.html.erb
+++ b/app/views/contents/cookie_policy.html.erb
@@ -1,5 +1,5 @@
 <% @page_title = 'Cookie Policy' %>
-
+<% @meta_description = "Cookie policy for mojoleaf.com" %>
 <%= render partial: 'layouts/header' %>
 
 
