--- a/app/views/devise/confirmations/new.html.erb
+++ b/app/views/devise/confirmations/new.html.erb
@@ -1,4 +1,5 @@
 <% @page_title = 'Resend Confirmation Instructions' %>
+<% @meta_description = "Lost your password? No problem we can resend your confirmation instructions." %>
 
 <%= render partial: 'layouts/header' %>
 
