--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -1,4 +1,5 @@
 <% @page_title = 'Forgot Your Password' %>
+<% @meta_description = "Forgot your password? Not a problem." %>
 
 <%= render partial: 'layouts/header' %>
 
