changed destination_url name

--- a/app/views/tests/thanks.html.erb
+++ b/app/views/tests/thanks.html.erb
@@ -15,7 +15,7 @@
  		<% if @current_tests.blank? %>
  			<%= link_to "Homepage", root_path, class: "button center" %>
  		<% else %>
-			<a class="button center" href="<%= @test.destination_url %>" target=“_blank”>Continue</a>
+			<a class="button center" href="<%= @test.chosen_destination %>" target=“_blank”>Continue</a>
 		<% end %>
 
 
