changed hint text

--- a/app/views/tests/new.html.erb
+++ b/app/views/tests/new.html.erb
@@ -16,7 +16,7 @@
 		
 						<%= form.input :image, label: "Which design would you like feedback on (png or jpg)?", input_html: { class: 'grey-background' } %>
 				
-						<%= form.input :chosen_destination, label: "Do you want to direct participants somewhere special once they complete your test? (optional)", hint: "e.g. http://www.yoursite.com" %>
+						<%= form.input :chosen_destination, label: "Do you want to direct participants somewhere special once they complete your test? (optional)", hint: "e.g. www.yoursite.com" %>
 					
 					<div class="centre">	
 						<%= form.button :submit, "Add your design", data: { disable_with: "Adding your design..." }  %>
