--- a/app/views/tests/expired.html.erb
+++ b/app/views/tests/expired.html.erb
@@ -10,7 +10,13 @@
  </div>
  <div class="thanks-homepage">
  	<div class="centre">
- <%= link_to "Homepage", root_path, class: "button center" %></div>
+		<% if @test.chosen_destination == "http://" %>
+ 			<%= link_to "Homepage", root_path, class: "button center" %>
+ 		<% else %>
+			<a class="button center" href="<%= @test.chosen_destination %>" target=“_blank”>Continue</a>
+		<% end %>
+
+	</div>
  </div>
  
  </div>
