--- a/app/views/tests/expired.html.erb
+++ b/app/views/tests/expired.html.erb
@@ -10,7 +10,7 @@
  </div>
  <div class="thanks-homepage">
  	<div class="centre">
-		<% if @test.chosen_destination == "http://"  || @test.chosen_destination.empty? %>
+		<% if @test.chosen_destination == "http://"  || @test.chosen_destination.blank? %>
  			<%= link_to "Homepage", root_path, class: "button center" %>
  		<% else %>
 			<a class="button center" href="<%= @test.chosen_destination %>" target=“_blank”>Continue</a>
