--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -7,7 +7,7 @@
 <div class="wrapper">
 	<div class="test-form">
 
-		<h2>Register to start using mojoleaf</h2>
+		<h2>Register to add designs and get feedback</h2>
           
       <% if flash[:alert].present? %>
           <div data-alert class="home-flash">
